chaning text cart page

--- a/cart.html
+++ b/cart.html
@@ -58,8 +58,8 @@
                         width="400" height="300">
                 </picture>
                 <div class="checkoutDetails">
-                    <h2>Produktnamn</h2>
-                    <h3>Artikelnummer</h3>
+                    <h2>GLADA VÄXTER</h2>
+                    <h3>Artikelnummer: 001-001</h3>
                     <span class="productPrice">495:-</span><br>
                     <span class="quantity">Antal: 1</span>
                 </div>
