lägger till fetchpriority

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 height="281" type="image/webp">
             <source media="(max-width: 599px)" srcset="images/header_mobile.webp" width="600" height="432"
                 type="image/webp">
-            <img class="hero" src="images/header.jpg" alt="" width="2500" height="918">
+            <img class="hero" src="images/header.jpg" alt="" width="2500" height="918" fetchpriority="high">
         </picture>
     </header>
     <div class="fullBackground">
