--- a/product1.html
+++ b/product1.html
@@ -71,7 +71,7 @@
                 <picture>
                     <source srcset="images/product1/product1_main.webp" width="450" height="338" type="image/webp">
                     <img src="images/product1/product1_main.jpg" alt="gul och blå legokruka med grön växt" width="450"
-                        height="338">
+                        height="338" fetchpriority="high">
                 </picture>
             </a>
             <div class="thumbnailsProduct">
