--- a/product2.html
+++ b/product2.html
@@ -71,7 +71,7 @@
                 <picture>
                     <source srcset="images/product2/product2_main.webp" width="450" height="338" type="image/webp">
                     <img src="images/product2/product2_main.jpg" alt="tre tropiska växter i terracottafärgade krukor" width="450"
-                        height="338">
+                        height="338" fetchpriority="high">
                 </picture>
             </a>
             <div class="thumbnailsProduct">
