--- a/product3.html
+++ b/product3.html
@@ -72,7 +72,7 @@
                 <picture>
                     <source srcset="images/product3/product3_main.webp" width="450" height="338" type="image/webp">
                     <img src="images/product3/product3_main.jpg" alt="Grått Nintendo Game Boy spel konsol" width="450"
-                        height="338">
+                        height="338" fetchpriority="high">
                 </picture>
             </a>
             <div class="thumbnailsProduct">
