--- a/product4.html
+++ b/product4.html
@@ -72,7 +72,7 @@
                 <picture>
                     <source srcset="images/product4/product4_main.webp" width="450" height="338" type="image/webp">
                     <img src="images/product4/product4_main.jpg" alt="Röda Nanohandsken från Avengersfilmen" width="450"
-                        height="338">
+                        height="338" fetchpriority="high">
                 </picture>
             </a>
             <div class="thumbnailsProduct">
