--- a/product5.html
+++ b/product5.html
@@ -71,7 +71,7 @@
                 <picture>
                     <source srcset="images/product5/product5_main.webp" width="450" height="338" type="image/webp">
                     <img src="images/product5/product5_main.jpg" alt="Vita droiden R2-D2 från Star wars" width="450"
-                        height="338">
+                        height="338" fetchpriority="high">
                 </picture>
             </a>
             <div class="thumbnailsProduct">
