--- a/products.html
+++ b/products.html
@@ -58,7 +58,7 @@
                             <source srcset="images/product1/product1_products.webp" width="400" height="300"
                                 type="image/webp">
                             <img src="images/product1/product1_products.jpg" alt="gul och blå legokruka med grön växt"
-                                width="400" height="300">
+                                width="400" height="300" fetchpriority="high">
                         </picture>
                         <h2>Glada växter</h2>
                         <h3>Artikelnummer: 001-001</h3>
