lägger till saknad bredd,höjd på shoppingcart

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </ul>
             </nav>
             <div class="cart">
-                <a href="cart.html">Varukorg <img id="shoppingCart" src="images/shoppingcart.svg" alt="Varukorg"></a>
+                <a href="cart.html">Varukorg <img id="shoppingCart" src="images/shoppingcart.svg" alt="Varukorg" width="45" height="43"></a>
             </div>
         </div>
     </div>
