byter bilder product2

--- a/products.html
+++ b/products.html
@@ -70,10 +70,10 @@
                 <a href="product2.html">
                     <div>
                         <picture>
-                            <source srcset="images/product2/product2_products.webp" width="400" height="300"
+                            <source srcset="images/product2/product2_main.webp" width="534" height="401"
                                 type="image/webp">
-                            <img src="images/product2/product2_products.jpg" alt="gul och blå legokruka med grön växt"
-                                width="400" height="300">
+                            <img src="images/product2/product2_products.jpg" alt="tre tropiska växter i terracottafärgade krukor"
+                                width="534" height="401">
                         </picture>
                         <h2>Små växter</h2>
                         <h3>Artikelnummer: 001-002</h3>
