byter bilder product3

--- a/products.html
+++ b/products.html
@@ -85,10 +85,10 @@
                 <a href="product3.html">
                     <div>
                         <picture>
-                            <source srcset="images/product3/product3_products.webp" width="400" height="300"
+                            <source srcset="images/product3/product3_products.webp" width="534" height="401"
                                 type="image/webp">
-                            <img src="images/product3/product3_products.jpg" alt="gul och blå legokruka med grön växt"
-                                width="400" height="300">
+                            <img src="images/product3/product3_products.jpg" alt="Grått Nintendo Game Boy spel konsol"
+                                width="534" height="401">
                         </picture>
                         <h2>Game boy</h2>
                         <h3>Artikelnummer: 001-003</h3>
