byter bilder product4

--- a/products.html
+++ b/products.html
@@ -100,10 +100,10 @@
                 <a href="product4.html">
                     <div>
                         <picture>
-                            <source srcset="images/product4/product4_products.webp" width="400" height="300"
+                            <source srcset="images/product4/product4_main.webp" width="534" height="401"
                                 type="image/webp">
-                            <img src="images/product4/product4_products.jpg" alt="gul och blå legokruka med grön växt"
-                                width="400" height="300">
+                            <img src="images/product4/product4_main.jpg" alt="Röda Nanohandsken från Avengersfilmen"
+                                width="534" height="401">
                         </picture>
                         <h2>Nanohandsken</h2>
                         <h3>Artikelnummer: 001-004</h3>
