byter bilder product5

--- a/products.html
+++ b/products.html
@@ -115,10 +115,10 @@
                 <a href="product5.html">
                     <div>
                         <picture>
-                            <source srcset="images/product5/product5_products.webp" width="400" height="300"
+                            <source srcset="images/product5/product5_main.webp" width="534" height="401"
                                 type="image/webp">
-                            <img src="images/product5/product5_products.webp" alt="gul och blå legokruka med grön växt"
-                                width="400" height="300">
+                            <img src="images/product5/product5_main.jpg" alt="Vita droiden R2-D2 från Star wars"
+                                width="534" height="401">
                         </picture>
                         <h2>R2-D2</h2>
                         <h3>Artikelnummer: 001-005</h3>
