--- a/about.html
+++ b/about.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <!--Favicon-->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" type="images/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="images/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="images/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="images/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <title>Om företaget - Lego Interior Design</title>
 </head>
 
